--- a/package.json
+++ b/package.json
@@ -6,17 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "git": "git add . && git commit -m tredella && git push"
   },
   "dependencies": {
+    "@motionone/utils": "^10.17.0",
+    "antd": "^5.17.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
+    "swiper": "^11.1.3",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
