--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@motionone/utils": "^10.17.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.17.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
@@ -18,6 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "sharp": "^0.33.4",
     "swiper": "^11.1.3",
     "tailwind-merge": "^2.3.0"
