--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@motionone/utils": "^10.17.0",
     "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.17.3",
+    "axios": "^1.7.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
